// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHead renders button, count, and fields 1`] = `
<thead>
  <tr>
    <th
      onClick={[Function]}
      scope="col"
      title="add row"
    >
      <button>
        ➕
      </button>
    </th>
    <th
      colSpan={3}
      scope="colgroup"
    />
  </tr>
  <tr>
    <th
      scope="col"
    >
      7
    </th>
    <th
      scope="col"
    >
      when
    </th>
    <th
      scope="col"
    >
      what
    </th>
    <th
      scope="col"
    >
      weep
    </th>
  </tr>
</thead>
`;

exports[`TableHead renders button, count, but no fields 1`] = `
<thead>
  <tr>
    <th
      onClick={[Function]}
      scope="col"
      title="add row"
    >
      <button>
        ➕
      </button>
    </th>
  </tr>
  <tr>
    <th
      scope="col"
    >
      0
    </th>
  </tr>
</thead>
`;
